# mealie-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  MEALIE_API_REFERENCE.md  README.md  SYSTEM_PROMPT.md  TESTING_GUIDE.md  compose.yml  openapi.json  parse_openapi.py  pyproject.toml  test_cli.py
.github/workflows/: docker-publish.yml
src/mealie_mcp/: __init__.py  client.py  server.py  server_core.py  server_full.py
